# satysfi-colorbox

./: README.md  Satyristes  satysfi-colorbox-doc.opam  satysfi-colorbox.opam  test.saty
doc/: manual-ja.saty  manual.saty
src/: colorbox.satyh
