opam-version: "2.0"
name: "satysfi-colorbox-doc"
version: "0.1.0"
synopsis: "Document of Colorbox"
description: """Document of Colorbox package"""
maintainer: "Noriyuki Abe"
authors: "Noriyuki Abe"
license: "BSD-2-Clause-Views"
homepage: "https://github.com/abenori/satysfi-colorbox"
dev-repo: "git+https://github.com/abenori/satysfi-colorbox.git"
bug-reports: "https://github.com/abenori/satysfi-colorbox/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "1.0.0" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-enumitem" {>= "3.0.0" & < "3.1.0" }

  # You may want to include the corresponding library
  "satysfi-colorbox" {= "%{version}%"}
  "satysfi-dist"
  
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "colorbox-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "colorbox-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
