opam-version: "2.0"
name: "satysfi-colorbox"
version: "1.0.0"
synopsis: "Colored boxes"
description: """
"""
maintainer: "Noriyuki Abe"
authors: "Noriyuki Abe"
license: "BSD-2-Clause-Views"
homepage: "https://github.com/abenori/satysfi-colorbox"
dev-repo: "git+https://github.com/abenori/satysfi-colorbox.git"
bug-reports: "https://github.com/abenori/satysfi-colorbox/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "satysfi-colorbox"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "satysfi-colorbox"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
